--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Git branching lesson on test</title>
 </head>
-<body>
 
+<body>
+  <header>
+    <h1>Blag</h1>
+    <h2>Two Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dignissimos alias porro animi nostrum
+      reiciendis est, atque deleniti? Beatae earum nesciunt nihil voluptates, cumque ipsam magni? Eaque obcaecati
+      dolorum aliquam!</h2>
+  </header>
 </body>
+
 </html>
