--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       reiciendis est, atque deleniti? Beatae earum nesciunt nihil voluptates, cumque ipsam magni? Eaque obcaecati
       dolorum aliquam!</h2>
   </header>
+
+  <footer>
+    <p>copyright2013</p>
+  </footer>
 </body>
 
 </html>
